// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Hook) useDatepicker Default should not show days in other months 1`] = `
<tr>
  <td
    class="other   weekend"
  >
    <button
      disabled=""
      tabindex="-1"
      type="button"
    />
  </td>
  <td
    class="other   "
  >
    <button
      disabled=""
      tabindex="-1"
      type="button"
    />
  </td>
  <td
    class="other   "
  >
    <button
      disabled=""
      tabindex="-1"
      type="button"
    />
  </td>
  <td
    class="other   "
  >
    <button
      disabled=""
      tabindex="-1"
      type="button"
    />
  </td>
  <td
    class="other   "
  >
    <button
      disabled=""
      tabindex="-1"
      type="button"
    />
  </td>
  <td
    class="   "
  >
    <button
      tabindex="-1"
      type="button"
    >
      1
    </button>
  </td>
  <td
    class="   weekend"
  >
    <button
      tabindex="-1"
      type="button"
    >
      2
    </button>
  </td>
</tr>
`;

exports[`(Hook) useDatepicker Default should show the current month 1`] = `
<tr>
  <td
    class="other   weekend"
  >
    <button
      tabindex="-1"
      type="button"
    >
      26
    </button>
  </td>
  <td
    class="other   "
  >
    <button
      tabindex="-1"
      type="button"
    >
      27
    </button>
  </td>
  <td
    class="other   "
  >
    <button
      tabindex="-1"
      type="button"
    >
      28
    </button>
  </td>
  <td
    class="other   "
  >
    <button
      tabindex="-1"
      type="button"
    >
      29
    </button>
  </td>
  <td
    class="other   "
  >
    <button
      tabindex="-1"
      type="button"
    >
      30
    </button>
  </td>
  <td
    class="   "
  >
    <button
      tabindex="-1"
      type="button"
    >
      1
    </button>
  </td>
  <td
    class="   weekend"
  >
    <button
      tabindex="-1"
      type="button"
    >
      2
    </button>
  </td>
</tr>
`;

exports[`(Hook) useDatepicker Localised should show the current month 1`] = `
<tr>
  <td
    class="other   "
  >
    <button
      tabindex="-1"
      type="button"
    >
      二十七
    </button>
  </td>
  <td
    class="other   "
  >
    <button
      tabindex="-1"
      type="button"
    >
      二十八
    </button>
  </td>
  <td
    class="other   "
  >
    <button
      tabindex="-1"
      type="button"
    >
      二十九
    </button>
  </td>
  <td
    class="other   "
  >
    <button
      tabindex="-1"
      type="button"
    >
      三十
    </button>
  </td>
  <td
    class="   "
  >
    <button
      tabindex="-1"
      type="button"
    >
      一
    </button>
  </td>
  <td
    class="   weekend"
  >
    <button
      tabindex="-1"
      type="button"
    >
      二
    </button>
  </td>
  <td
    class="   weekend"
  >
    <button
      tabindex="-1"
      type="button"
    >
      三
    </button>
  </td>
</tr>
`;
